GNOME Bugzilla – Bug 602384
Numeric tests fail on 32-bit platforms
Last modified: 2009-11-30 20:26:30 UTC
Compiling PyGI on a 32-bit platform shows warnings and make numeric tests fail.
Created attachment 148663 [details] [review] Use the limit constants from glib and interpret G_MAXUINT32 as PyLong_FromLongLong
Tomeu, Why did you commit this? The patch that has been committed in PyGObject is not correct, it fails on 64-bit machines.
(In reply to comment #2) > Tomeu, > > Why did you commit this? > > The patch that has been committed in PyGObject is not correct, it fails on > 64-bit machines. As just told you on IRC, I misread a bz email and though you had closed this one instead of https://bugzilla.gnome.org/show_bug.cgi?id=603244 Will revert.
Created attachment 148784 [details] [review] Use the limit constants from glib and interpret G_MAXUINT32 as PyLong_FromLongLong
Review of attachment 148784 [details] [review]: Awesome; works fine on my 64-bit machine. Please push!
Attachment 148784 [details] pushed as 542fdf6 - Use the limit constants from glib and interpret G_MAXUINT32 as PyLong_FromLongLong