Use the limit constants from glib and interpret G_MAXUINT32 as PyLong_FromLongLong

https://bugzilla.gnome.org/show_bug.cgi?id=602384